--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.6.0",
+    "react-open-app": "^1.0.3",
     "react-redux": "^7.2.3",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.2",
+    "react-share": "^4.4.1",
     "react-simple-pull-to-refresh": "^1.3.3",
     "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
