--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "@testing-library/user-event": "^12.7.1",
         "bootstrap": "^4.6.0",
         "firebase": "^9.13.0",
+        "flutterwave-node-v3": "^1.0.11",
+        "flutterwave-react-v3": "^1.3.0",
         "javascript-time-ago": "^2.5.7",
         "jquery": "^3.6.1",
         "react": "^17.0.1",
@@ -25,6 +27,7 @@
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
+        "require": "^2.4.20",
         "web-vitals": "^1.1.0"
     },
     "scripts": {
