--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^12.7.1",
         "bootstrap": "^4.6.0",
         "firebase": "^9.13.0",
+        "firebase-admin": "^11.2.0",
         "flutterwave-node-v3": "^1.0.11",
         "flutterwave-react-v3": "^1.3.0",
         "javascript-time-ago": "^2.5.7",
@@ -16,6 +17,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.6.0",
+        "react-interswitch": "^1.0.8",
         "react-open-app": "^1.0.3",
         "react-redux": "^7.2.3",
         "react-ripples": "^2.2.1",
