--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "@testing-library/user-event": "^12.7.1",
         "bootstrap": "^4.6.0",
         "firebase": "^9.13.0",
-        "firebase-admin": "^11.2.0",
+        "firebase-admin": "^11.2.1",
         "flutterwave-node-v3": "^1.0.11",
         "flutterwave-react-v3": "^1.3.0",
         "javascript-time-ago": "^2.5.7",
@@ -26,6 +26,7 @@
         "react-share": "^4.4.1",
         "react-simple-pull-to-refresh": "^1.3.3",
         "react-toastify": "^7.0.3",
+        "react-web-share": "^2.0.2",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
